--- a/home.html
+++ b/home.html
@@ -17,9 +17,9 @@
     <div> Contact </div>
 </div>
 
-<div class="bouton">Inscription</div>
-<div class="bouton">Connexion</div>
-<div id='citation'> voilà</div>
+<div style=" position : relative; top:50px" class="bouton_orange">Connexion</div>
+<div class="bouton_blanc">Inscription</div>
+<div id='citation'><div></div></div>
 
 <img alt="picture_font" id="picture_font"/>
 </body>
@@ -29,6 +29,7 @@
 
 $( document ).ready(function() {
     font_picture();
+	citation();
 });
 
 </script>
